# vinyl-ecosystem

./: .gitignore  README.markdown  stack.yaml
chronoparse/: chronoparse.cabal
chronoparse/src/Chronoparse/: Combinators.hs  Iso8601.hs  Run.hs  Types.hs
operational-extra/: operational-extra.cabal
operational-extra/src/Control/Monad/Operational/: Console.hs  Exception.hs  Interpret.hs  Now.hs  Wait.hs
operational-extra/src/Control/Monad/Operational/Console/: Text.hs
operational-http/: operational-http.cabal
operational-http/src/Control/Monad/Operational/: Http.hs
siphon/: .stylish-haskell.yaml  siphon.cabal
siphon/src/Siphon/: Example.hs  Field.hs  Functor.hs  Internal.hs  Parse.hs  Types.hs
vinyl-operational/: vinyl-operational.cabal
vinyl-operational/src/Data/Vinyl/Operational/: Core.hs
vinyl-operational/src/Operational/: CoRec.hs  Exception.hs  Http.hs  Interpret.hs
vinyl-operational/src/Operational/Http/: Log.hs
vinyl-plus/: .stylish-haskell.yaml  vinyl-plus.cabal
vinyl-plus/scripts/: rename_module
vinyl-plus/src/Data/: TypeMap.hs
vinyl-plus/src/Data/Functor/: Higher.hs
vinyl-plus/src/Data/Tagged/: Functor.hs
vinyl-plus/src/Data/Tuple/: TypeLevel.hs
vinyl-plus/src/Data/Vinyl/: Optic.hs  Prelude.hs  Tagged.hs  Types.hs
vinyl-plus/src/Data/Vinyl/Optic/Plain/: Class.hs
vinyl-plus/src/Data/Vinyl/Optic/Tagged/: Class.hs
vinyl-plus/src/Data/Vinyl/Optic/Tagged/Proxy/: Functor.hs  Identity.hs
vinyl-plus/src/Data/Vinyl/Plus/: CoRec.hs  Functor.hs  Internal.hs  Prelude.hs  Tagged.hs  TypeLevel.hs  Types.hs
vinyl-plus/src/Data/Vinyl/Plus/Functor/: Prelude.hs
vinyl-plus/src/Data/Vinyl/Prelude/: CoRec.hs  Rec.hs
vinyl-plus/src/Data/Vinyl/Tagged/: Class.hs
vinyl-plus/src/Data/Vinyl/Tagged/Proxy/: Functor.hs  Identity.hs
vinyl-plus/test/: doctest.hs
