name:                operational-http
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/andrewthad/vinyl-ecosystem
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2016 Andrew Martin
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Operational.Http
  build-depends:       base >= 4.7 && < 5
                     , operational
                     , operational-extra
                     , http-client
                     , http-types
                     , bytestring
  default-language:    Haskell2010
  default-extensions:
    RankNTypes
    GADTs
    ScopedTypeVariables

source-repository head
  type:     git
  location: https://github.com/andrewthad/vinyl-ecosystem
