name:                vinyl-plus
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/andrew/vinyl-plus
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2016 Andrew Martin
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Vinyl.Plus.Types
                     , Data.Vinyl.Plus.CoRec
                     , Data.Vinyl.Plus.Functor
                     , Data.Vinyl.Plus.Prelude
                     , Data.Vinyl.Plus.Functor.Prelude
                     , Data.Vinyl.Plus.TypeLevel
                     , Data.Tuple.TypeLevel
                     , Data.Tagged.Functor
                     , Data.TypeMap
  build-depends:       base >= 4.7 && < 5
                     , vinyl
                     , transformers
                     , contravariant
                     , unordered-containers
                     , ghc-prim
  default-language:    Haskell2010
  default-extensions:
    PolyKinds
    RankNTypes
    TypeOperators
    DataKinds
    GADTs
    MultiParamTypeClasses
    TypeFamilies
    StandaloneDeriving
    ConstraintKinds
    ScopedTypeVariables
    BangPatterns
    -- FlexibleInstances
    -- FlexibleContexts

source-repository head
  type:     git
  location: https://github.com/andrewthad/vinyl-plus
